# DriftApp-Web

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  GUIDE_INSTALLATION.md  MODIFICATIONS_V4.4.md  PLAN_ANALYSE_REFACTORING.md  README.md  RP2040_UPGRADE.md  calibration_moteur.py  cimier_service.service  dashboard.js  deploy_v4.4.sh  driftapp_web.service  ems22d.service  ems22d_calibrated.py  gestion_hardware_butees_cimier_3.txt  main.py  main_gui.py  motor_service.service  pyproject.toml  pytest.ini  requirements-pi.txt  requirements.txt  start_dev.sh  start_web.sh
.claude/: settings.local.json
.claude/commands/: backup.md  calibrate.md  catalogue.md  code-review.md  config.md  deploy.md  diagnose.md  logs.md  refactor-code.md  session-report.md  test-motor.md  tracking-debug.md  update.md
.github/workflows/: ci.yml
.paul/: HANDOFF-2026-03-13-phase1.5-complete.md  MILESTONES.md  PROJECT.md  ROADMAP.md  SPECIAL-FLOWS.md  STATE.md  config.md
.paul/milestones/: v5.0.0-ROADMAP.md  v5.1-ROADMAP.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
core/: exceptions.py
core/config/: config.py  config_loader.py  config_resilience.py  config_status_writer.py  logging_config.py
core/hardware/: acceleration_ramp.py  calibration_routine.py  cimier_mechanism_sim.py  cimier_simulator.py  daemon_encoder_reader.py  encoder_reader.py  feedback_controller.py  hardware_detector.py  moteur.py  moteur_rp2040.py  moteur_simule.py  motor_config_parser.py  motor_shelly.py  position_persistor.py  power_switch.py  serial_simulator.py  shelly_switch_reader.py  sim_motor_shelly.py  weather_provider.py
core/observatoire/: __init__.py  calculations.py  catalogue.py  ephemerides.py  sun_altitude.py
core/tracking/: __init__.py  abaque_manager.py  adaptive_tracking.py  meridian_anticipation.py  tracker.py  tracking_corrections_mixin.py  tracking_goto_mixin.py  tracking_logger.py  tracking_meridian_anticipation_mixin.py  tracking_state_mixin.py
core/ui/: __init__.py  main_screen.py  modals.py  styles.py  viewmodel.py
core/utils/: __init__.py  angle_utils.py
data/: Loi_coupole.xlsx  Vitesses.xlsx  config.json  config.template.json  objets_cache.json  sync_config.json
data/sessions/: 20251225_181920_IC__405.json
docs/: IPC_API.md  Principe du gel de coupole.odt  Problème des trois vitesses au retournement de méridien.odt  RP2040_UPGRADE.md  deploiement_v6.7.0_terrain.md  synoptique electronique cimier.docx
docs/history/: AJOUT_BOUSSOLE_COUPOLE_GUI.md  AJOUT_CARTOUCHE_ENCODEUR_GUI.md  ANALYSE_BUGS_7-8_DEC_2025.md  (+24 more)
firmware/: README.md  main.py  ramp.py  step_generator.py
gui/: CHANGELOG.md  README.md  __init__.py  app.py
logs/: diagnostic_moteur_20251216_154131.txt
scripts/: build_css.sh  deploy.sh  gen_deploiement_v670_pdf.py  migrate_to_v6.4.sh  revert_to_tui.sh  test_terrain.py  update_driftapp.sh  update_to_web.sh
services/: cimier_ipc_manager.py  cimier_scheduler.py  cimier_service.py  command_handlers.py  ipc_manager.py  motor_ipc_writer.py  motor_service.py  simulation.py
setup/: driftapp-updater.sudoers
tests/: __init__.py  conftest.py  motor_service_with_test_speed.py  test_abaque_manager.py  test_acceleration_ramp.py  test_adaptive_tracking.py  test_angle_utils.py  test_calculations.py  test_calibration_routine.py  test_catalogue.py  test_cimier_controller.py  test_cimier_manual.py  test_cimier_mechanism_sim.py  test_cimier_scheduler.py  test_cimier_service.py  test_cimier_simulator.py  test_command_handlers.py  test_config.py  test_config_diff.py  test_config_loader.py  test_config_resilience.py  test_config_status_writer.py  test_configuration_views.py  test_cross_layer.py  test_daemon_encoder_reader.py  test_e2e.py  test_ephemerides.py  test_exceptions.py  test_feedback_controller.py  test_hardware_detector.py  test_health_views.py  test_integration.py  test_integration_ipc.py  test_integration_rp2040.py  test_ipc_manager.py  test_log_retention.py  test_logging_operationnel.py  test_meridian_anticipation.py  test_meridian_flip.py  test_moteur.py  (+25 more)
tests_sur_site/: test_gpio27_lgpio.py
web/: manage.py  requirements.txt
(+206 files in other folders)
