[project]
name = "dome-app-3.1"
version = "3.1.0"
description = "Gestion de coupole d'observatoire astronomique"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy==7.1.0",
    "astropy-iers-data==0.2025.9.8.0.36.17",
    "astroquery==0.4.10",
    "beautifulsoup4==4.13.5",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "cryptography==45.0.7",
    "html5lib==1.1",
    "idna==3.10",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.0.1",
    "jaraco-functools==4.3.0",
    "jeepney==0.9.0",
    "keyring==25.6.0",
    "more-itertools==10.8.0",
    "numpy==2.3.3",
    "packaging==25.0",
    "pycparser==2.23",
    "pyerfa==2.0.1.5",
    "pyside6<6.8",
    "pyside6-addons<6.8",
    "pyside6-essentials<6.8",
    "shiboken6<6.8",
    "pyvo==1.7",
    "pyyaml==6.0.2",
    "requests==2.32.5",
    "secretstorage==3.4.0",
    "six==1.17.0",
    "soupsieve==2.8",
    "spidev>=3.5; platform_machine == 'aarch64'",
    "lgpio>=0.2.2.0; platform_machine == 'aarch64'",
    "typing-extensions==4.15.0",
    "urllib3==2.5.0",
    "webencodings==0.5.1",
    "textual==6.1.0",
    "scipy>=1.7.0",
    "openpyxl>=3.0.0",
    "matplotlib>=3.5.0",
    "panda>=0.3.1",
    "pandas>=2.3.3",
    "django>=6.0",
    "djangorestframework>=3.16.1",
]

[project.optional-dependencies]
gui = [
    "kivy[base]>=2.3.0",
]

[project.scripts]
driftapp = "main:main"
driftapp-gui = "main_gui:main"

