[project]
name = "driftapp"
version = "4.4.0"
description = "Gestion de coupole d'observatoire astronomique avec suivi adaptatif"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Astronomie
    "astropy>=6.0.0",
    "astroquery>=0.4.7",
    "pyerfa>=2.0.0",

    # Calculs scientifiques
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",

    # Fichiers Excel (abaque)
    "openpyxl>=3.1.0",

    # Visualisation (optionnel, pour boussole)
    "matplotlib>=3.7.0",

    # Interface web Django
    "django>=4.2.0",
    "djangorestframework>=3.14.0",

    # Interface TUI (Textual)
    "textual>=0.40.0",

    # Réseau
    "requests>=2.31.0",
    "urllib3>=2.0.0",

    # Utilitaires
    "pyyaml>=6.0.0",
    "packaging>=23.0",

    # GPIO Raspberry Pi (conditionnel)
    "spidev>=3.5; platform_machine == 'aarch64'",
    "lgpio>=0.2.2.0; platform_machine == 'aarch64'",
]

[project.optional-dependencies]
# Interface graphique Kivy (ancienne version)
gui = [
    "kivy[base]>=2.3.0",
]

# Développement
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
driftapp = "main:main"
driftapp-tui = "main:main"
driftapp-web = "web.manage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "services", "web"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]